--- a/pages/shop.html
+++ b/pages/shop.html
@@ -12,12 +12,13 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/shop.css">
+    <link rel="stylesheet" href="../css/reponsive.css">
 </head>
 
 <body>
     <header class="top" id="home">
         <div class="top1">
-            <ul class="location">
+            <ul class="location col">
                 <li>
                     <i class="fas fa-map-marker-alt"></i>
                     <a href="https://www.google.com/maps"> 317 PACIFC C HWY, HUNTINGTON, CA 92648 </a>
@@ -42,16 +43,88 @@
         </div>
         <div class="top2">
             <div class="logo">
-                <a href="#"><img src="../img/spoon.png" alt="logo"></a>
+                <a href="../index.html"><img src="../img/spoon.png" alt="logo"></a>
+            </div>
+            <div class="toggle-menu">
+                <span onclick="shownav()"><i class="fas fa-bars"></i></span>
+            </div>
+            <div id="togglenav" class="nav2">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#menu">MENU</a></li>
+                    <li><a href="#blog">BLOG</a></li>
+                    <li><a href="#events">EVENTS</a></li>
+                    <li><a href="#team">TEAM</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="#">|</a></li>
+                    <li id="m-item" onclick="showitem()">
+                        <a href="#">PAGE</a><span><i class="fas fa-chevron-down"></i></span>
+                        <ul>
+                            <li>
+                                <a href="#">MENU</a><span><i class="fas fa-chevron-down"></i></span>
+                                <ul>
+                                    <li><a href="#">MENU (MIXED LAYOUT)</a></li>
+
+                                    <li><a href="#">MENU WITH TABS</a></li>
+
+                                    <li><a href="#">MENU WITH SMALL SQAURE IMAGES</a></li>
+
+                                    <li><a href="#">MENU WITH LARGE SQAURE IMAGES</a></li>
+                                </ul>
+                            </li>
+
+                            <li><a href="#">CONTENT BOXES</a></li>
+
+                            <li>
+                                <a href="#">BLOG</a><span><i class="fas fa-chevron-down"></i></span>
+                                <ul>
+                                    <li><a href="#">BLOG MASONRY </a></li>
+
+                                    <li><a href="#">BLOG 1 COLUMN WITH SIDEBAR</a></li>
+                                </ul>
+                            </li>
+
+                            <li><a href="#">GALLERY</a></li>
+
+                            <li><a href="#">EVENTS</a></li>
+
+                            <li><a href="#">THE SPOON TEAM</a></li>
+
+                            <li><a href="#">CONTACT</a></li>
+
+                            <li>
+                                <a href="#">PAGE EXAMPLES</a><span><i class="fas fa-chevron-down"></i></span>
+                                <ul>
+                                    <li><a href="#">PAGE WITHOUT SIDEBAR</a></li>
+
+                                    <li><a href="#">PAGE NO SIDEBAR + FEATURE IMAGES</a></li>
+
+                                    <li><a href="#">FULLWIDE PAGE</a></li>
+
+                                    <li><a href="#">FULLWIDE PAGE + FEATURE IMAGES</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">THEME FEATURES</a><span><i class="fas fa-chevron-down"></i></span>
+                        <ul>
+                            <li><a href="#">SHORTCODES</a></li>
+
+                            <li><a href="#">TYPOGRAPHY</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="pages/shop.html">SHOP</a></li>
+                </ul>
             </div>
             <div class="nav">
                 <ul>
-                    <li><a href="../index.html">HOME</a></li>
-                    <li><a href="../index.html#menu">MENU</a></li>
-                    <li><a href="../index.html#blog">BLOG</a></li>
-                    <li><a href="../index.html#events">EVENTS</a></li>
-                    <li><a href="../index.html#team">TEAM</a></li>
-                    <li><a href="../index.html#contact">CONTACT</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#menu">MENU</a></li>
+                    <li><a href="#blog">BLOG</a></li>
+                    <li><a href="#events">EVENTS</a></li>
+                    <li><a href="#team">TEAM</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                     <li><a href="#">|</a></li>
                     <li>
                         <a href="#">PAGE +</a>
@@ -110,8 +183,9 @@
                             <li><a href="#">TYPOGRAPHY</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">SHOP</a></li>
+                    <li><a href="pages/shop.html">SHOP</a></li>
                 </ul>
+                <!-- </div> -->
             </div>
         </div>
     </header>
@@ -120,12 +194,12 @@
             <a href="#top"><i class="fas fa-arrow-up"></i></a>
         </div>
         <main>
-            <aside class="left">
+            <aside class="left md-12">
                 <form action="" name="form">
-                    <input name="iptext" type="text" placeholder="search ...">
+                    <input id="search-bar" onkeyup="search()" name="iptext" type="text" placeholder="search ...">
                     <button type="reset" class="delete-text"><i class="fas fa-times"></i></button>
                 </form>
-                <ul class="m-ul">
+                <ul id="m-ul">
                     <li><a href="">coffee</a> </li>
                     <li><a href="">pasta</a></li>
                     <li><a href="">sweet and snacks</a>
@@ -231,71 +305,71 @@
                     </div>
                 </div>
             </aside>
-            <aside class="right">
+            <aside class="right md-12">
                 <h2 class="page-title">SHOP</h2>
                 <p class="results">showing all 12 results</p>
                 <div class="shop-container">
                     <div class="shop-row">
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Coffee-450x450.jpg" alt="">
                             <h3>spoon organic coffe selection</h3>
                             <div>$5.00 - $12.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Muffin-450x450.jpg" alt="">
                             <h3>gluten free chocolate muffins</h3>
                             <div>$4.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Truffles-450x450.jpg" alt="">
                             <h3>homemade vegan chocolate truffles</h3>
                             <div>$20.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Pistacchios-450x450.jpg" alt="">
                             <h3>organic postachios</h3>
                             <div>$2.50 - $7.00</div>
                         </div>
                     </div>
                     <div class="shop-row">
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/DarkChocolate-450x450.jpg" alt="">
                             <h3>vegan drank chocolate 100% organic</h3>
                             <div>$4.00 - $10.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/WhiteChocolate-450x450.jpg" alt="">
                             <h3>vegan white chocolate 100% organic</h3>
                             <div>$4.00 - $10.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/BlackAssamTea-450x450.jpg" alt="">
                             <h3>black assam tea</h3>
                             <div>$8.00 - $30.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/BlackChineseTea-450x450.jpg" alt="">
                             <h3>black chinese tea</h3>
                             <div>$5.00 - $12.00</div>
                         </div>
                     </div>
                     <div class="shop-row">
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Coconutballs-450x450.jpg" alt="">
                             <h3>organic coconut balls</h3>
                             <div>$2.50</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Pistacchios-450x450.jpg" alt="">
                             <h3>homemade organic pasta with sepia</h3>
                             <div>$4.00 - $13.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/Gnocchi-450x450.jpg" alt="">
                             <h3>gluten Free homemade gnocchi</h3>
                             <div>$6.00 - $21.00</div>
                         </div>
-                        <div class="shop-item">
+                        <div class="shop-item fsm-6">
                             <img src="../img/shop/LimaBeans-450x450.jpg" alt="">
                             <h3>organic lima beans</h3>
                             <div>$3.50</div>
@@ -303,13 +377,20 @@
                     </div>
 
                 </div>
+                <div class="pagination">
+                    <a href="#">&laquo;</a>
+                    <a href="#" class="active">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">&raquo;</a>
+                  </div>
             </aside>
         </main>
     </section>
     <footer id="footer">
         <div class="ft-social">
             <ul>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li  ><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-tripadvisor"></i></a></li>
