--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+<link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -1102,6 +1121,95 @@
                         <div class="team-m-info">favorit food: rib-eye staek with cilli butter</div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div id="team-2">
+            <div class="intro">
+                <h1>spoon team</h1>
+                <div class="description">
+                    OUR TEAM WILL MAKE YOUR STAY AT SPOON AN UNFORGETTABLE ONE.
+                </div>
+            </div>
+            <div class="team-container">
+                <div class="team-item sm-12 team-slides n-fade">
+                    <div class="team-img">
+                        <a href=""><img src="img/team/Aaron-450x450.jpg" alt="t1"></a>
+                    </div>
+                    <div class="team-name">
+                        <a href="">
+                            <h2>aaron</h2>
+                        </a>
+                    </div>
+                    <div class="team-job">chef de cuisine</div>
+                    <div class="team-info">
+                        <div class="team-email">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:aaron@spoon.com">aaron@spoon.com</a>
+                        </div>
+                        <div class="team-m-info">favorit food: grilled talapia with craysish sauce</div>
+                    </div>
+                </div>
+                <div class="team-item sm-12 team-slides n-fade">
+                    <div class="team-img">
+                        <a href=""><img src="img/team/Jen-450x450.jpg" alt="t2"></a>
+                    </div>
+                    <div class="team-name">
+                        <a href="">
+                            <h2>jen</h2>
+                        </a>
+                    </div>
+                    <div class="team-job">owner</div>
+                    <div class="team-info">
+                        <div class="team-email">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:jen@spoon.com">jen@spoon.com</a>
+                        </div>
+                        <div class="team-m-info">fovorit food: tom kha gai</div>
+                    </div>
+                </div>
+                <div class="team-item sm-12 team-slides n-fade">
+                    <div class="team-img">
+                        <a href=""> <img src="img/team/kimchi-450x450.jpg" alt="t3"></a>
+                    </div>
+                    <div class="team-name">
+                        <a href="">
+                            <h2>gwyn</h2>
+                        </a>
+                    </div>
+                    <div class="team-job">sever</div>
+                    <div class="team-info">
+                        <div class="team-email">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:kwyn@spoon.com">kwynron@spoon.com</a>
+                        </div>
+                        <div class="team-m-info">favorit food: seafood ramen</div>
+                    </div>
+                </div>
+                <div class="team-item sm-12 team-slides n-fade">
+                    <div class="team-img">
+
+                        <a href=""><img src="img/team/milo-450x450.jpg" alt="t1"></a>
+                    </div>
+                    <div class="team-name">
+                        <a href="">
+                            <h2>milo</h2>
+                        </a>
+                    </div>
+                    <div class="team-job">chef de cuisine</div>
+                    <div class="team-info">
+                        <div class="team-email">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:milo@spoon.com">milo@spoon.com</a>
+                        </div>
+                        <div class="team-m-info">favorit food: rib-eye staek with cilli butter</div>
+                    </div>
+                </div>
+                <div style="text-align:center">
+                    <span class="dots-2"></span> 
+                    <span class="dots-2"></span> 
+                    <span class="dots-2"></span> 
+                    <span class="dots-2"></span> 
+                  </div>
             </div>
         </div>
         <div id="hours">
