--- a/pages/shop.html
+++ b/pages/shop.html
@@ -50,12 +50,12 @@
             </div>
             <div id="togglenav" class="nav2">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#menu">MENU</a></li>
-                    <li><a href="#blog">BLOG</a></li>
-                    <li><a href="#events">EVENTS</a></li>
-                    <li><a href="#team">TEAM</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../index.html">MENU</a></li>
+                    <li><a href="../index.html">BLOG</a></li>
+                    <li><a href="../index.html">EVENTS</a></li>
+                    <li><a href="../index.html">TEAM</a></li>
+                    <li><a href="../index.html">CONTACT</a></li>
                     <li><a href="#">|</a></li>
                     <li id="m-item" onclick="showitem()">
                         <a href="#">PAGE</a><span><i class="fas fa-chevron-down"></i></span>
@@ -119,12 +119,12 @@
             </div>
             <div class="nav">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#menu">MENU</a></li>
-                    <li><a href="#blog">BLOG</a></li>
-                    <li><a href="#events">EVENTS</a></li>
-                    <li><a href="#team">TEAM</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../index.html#menu">MENU</a></li>
+                    <li><a href="../index.html#blog">BLOG</a></li>
+                    <li><a href="../index.html#events">EVENTS</a></li>
+                    <li><a href="../index.html#team">TEAM</a></li>
+                    <li><a href="../index.html#contact">CONTACT</a></li>
                     <li><a href="#">|</a></li>
                     <li>
                         <a href="#">PAGE +</a>
