--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
             </div>
             <div class="slide ">
                 <img class="fade" src="img/slides/slider1s.jpg" alt="1">
+                <!-- <div class="slide-text">
+                    span
+                </div> -->
             </div>
             <div class="slide">
                 <img class="fade" src="img/slides/slider2s2.jpg" alt="2">
